# MCP_Learning

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
chapter10/: .env.example  AGENT.md  README.md  TESTING_PLAN.md  TOOL_EXECUTION_FLOW.md  USAGE.md  WINDOWS_UNICODE_BEST_PRACTICES.md  adaptive_task_planner.py  agent_session.json  config.sample.yaml  config.yaml  config_manager.py  connection_manager.py  conversation_manager.py  display_manager.py  display_manager_rich.py  error_aware_executor.py  error_aware_executor_v1.py  error_handler.py  gpt5_chat.py  integrated_agent.py  integrated_mcp_agent.py  interrupt_manager.py  llm_client.py  llm_interface.py  load_env.py  mcp_agent.py  mcp_agent_enhanced.py  mcp_agent_repl.py  mcp_llm_step1.py  mcp_manager.py  mcp_repl.py  mcp_servers.json  mcp_servers_clean.json  minimal_config.yaml  prompts.py  pyproject.toml  pytest.ini  quick_test.py  repl_command_handlers.py  (+40 more)
chapter10/.mcp_agent/: conversation.txt  session.json
chapter10/docs/: ADAPTIVE_EXECUTION_PLAN.md  DEBUG_TIMELINE.md  MCP_AGENT_V4_DOCUMENTATION_PLAN.md  REFACTORING_PLAN.md  chapter10_code_review.md  chapter10_code_review_phase1_update.md  chapter10_honest_review.md  refactoring_lessons_learned.md  refactoring_plan_immediate.md
chapter10/examples/: data_analysis_demo.py  my_first_agent.py  my_first_agent_verbose.py  real_mcp_demo.py
chapter10/tests/: conftest.py  test_agent_surrogate_fix.py  test_cleanup.py  test_context_isolation.py  test_conversation_memory.py  test_error_retry.py  test_fibonacci.py  test_japanese_display.py  (+3 more)
(+254 files in other folders)
